--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
-    <meta name="description" content="">
-    <!--<meta name="viewport" content="width=device-width">-->
+    <meta name="viewport" content="width=device-width">
+
+    <title>Video Queue - Share videos with fewer distractions</title>
+
+    <meta name="description" content="Share a collection of YouTube or Vimeo videos without the usual clutter and distractions. Great for teachers!">
+    <meta property="og:title" content="Video Queue - Share videos with fewer distractions"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://eusonic.github.com/video-queue"/>
+    <meta property="og:image" content="http://eusonic.github.com/video-queue/facebook.png"/>
+    <meta property="og:site_name" content="Video Queue"/>
+    <meta property="og:description" content="Share a collection of YouTube or Vimeo videos without the usual clutter and distractions. Great for teachers!"/>
 
     <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Oleo+Script|Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/main.css">
@@ -93,8 +101,8 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
 
     <script src="js/vendor/jquery-ui-1.10.0.custom.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/plugins.min.js"></script>
+    <script src="js/main.min.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
