--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Share a collection of YouTube or Vimeo videos without the usual clutter and distractions. Great for teachers!"/>
 
     <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Oleo+Script|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     
