refine meta description, more space around welcome message

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <title>Video Queue - Share videos with fewer distractions</title>
 
-    <meta name="description" content="Share a collection of YouTube or Vimeo videos without the usual clutter and distractions. Great for teachers!">
+    <meta name="description" content="Share a collection of YouTube or Vimeo videos without the usual clutter and distractions. Designed for teachers, but great for anyone wanting a cleaner way to show videos.">
     <meta property="og:title" content="Video Queue - Share videos with fewer distractions"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://eusonic.github.com/video-queue"/>
     <meta property="og:image" content="http://eusonic.github.com/video-queue/facebook.png"/>
     <meta property="og:site_name" content="Video Queue"/>
-    <meta property="og:description" content="Share a collection of YouTube or Vimeo videos without the usual clutter and distractions. Great for teachers!"/>
+    <meta property="og:description" content="Share a collection of YouTube or Vimeo videos without the usual clutter and distractions. Designed for teachers, but great for anyone wanting a cleaner way to show videos."/>
 
     <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Oleo+Script|Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
