add warning for older ie browsers

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     </form>
 
     <div id="videos" class="container empty">
+      <!--[if lt IE 9]>
+        <p class="ie-warning error">You are using an older version of Internet Explorer. Video Queue currently only supports IE 9 and newer. You can still use it, but there are layout problems and some functionality may be broken. Sorry.</p>
+      <![endif]-->
       <aside class="welcome">
         <h2>Hello!</h2>
         <p>There are no videos in your queue.</p>
