--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div id="videos" class="container empty">
       <!--[if lt IE 9]>
-        <p class="ie-warning error">You are using an older version of Internet Explorer. Video Queue currently only supports IE 9 and newer. You can still use it, but there are layout problems and some functionality may be broken. Sorry.</p>
+        <p class="ie-warning error">You are using an older version of Internet Explorer. Video Queue currently only supports IE 9 and newer. You can still use it, but there are layout problems and some functionality may be broken. Sorry. Try downloading <a href="http://google.com/chrome">Chrome</a> or <a href="http://mozilla.org/en-US/firefox/new/">Firefox</a>.</p>
       <![endif]-->
       <aside class="welcome">
         <h2>Hello!</h2>
