testing analytics with a different account

--- a/index.html
+++ b/index.html
@@ -106,15 +106,13 @@
     <script src="js/vendor/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="js/plugins.min.js"></script>
     <script src="js/main.min.js"></script>
-    <!--
     <script>
-      var _gaq=[['_setAccount','UA-38461287-1'],['_trackPageview']];
+      var _gaq=[['_setAccount','UA-38499912-1'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
-    -->
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-38461287-1']);
       _gaq.push(['_trackPageview']);
@@ -123,6 +121,6 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-    </script>
+    </script>-->
   </body>
 </html>
