change wording of ie warning message

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div id="videos" class="container empty">
       <!--[if lt IE 9]>
-        <p class="ie-warning error">You are using an older version of Internet Explorer. Video Queue currently only supports IE 9 and newer. You can still use it, but there are layout problems and some functionality may be broken. <a href="http://browsehappy.com">Learn more about upgrading your browser.</a></p>
+        <p class="ie-warning error">You are using an older version of Internet Explorer which is not supported by this website. You should upgrade Internet Explorer or switch to another browser, like Chrome or Firefox. <a href="http://browsehappy.com">Learn more about upgrading your browser.</a></p>
       <![endif]-->
       <aside class="welcome">
         <h2>Hello!</h2>
