adjust language in footer

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         <div class="left">
           <section>
             <h3>About</h3>
-            <p>I built this website for teachers, but it should be useful to anyone wanting a simple way to share a collection of videos. Many teachers show videos in their classrooms, but websites like YouTube add links to &ldquo;related videos&rdquo; and other clutter that can be distracting and often isn’t appropriate for a classroom. This website strips away as many of these distractions as possible, providing a cleaner and safer way to show videos.</p>
+            <p>I built this website for teachers, but it should be useful to anyone wanting a simple way to share a collection of videos. Many teachers show videos in their classrooms, but websites like YouTube add links to &ldquo;related videos&rdquo; and other clutter that can be distracting and often isn’t appropriate for a classroom. Video Queue strips away as many of these distractions as possible, providing a cleaner and safer way to show videos.</p>
           </section>
           <section>
             <h3>Why do I still see ads?</h3>
-            <p>Unfortunately, it's impossible prevent YouTube from showing ads in videos. I don't make any money from these ads, and I have no plans to put additional advertising on this website.</p>
+            <p>Unfortunately, it's impossible stop YouTube from showing ads in videos. I don't make any money from these ads, and I have no plans to put additional advertising on this website.</p>
           </section>
         </div><!-- prevent inline-block gaps
      --><section class="right feedback">
