--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta name="description" content="Share a collection of YouTube and Vimeo videos without the usual clutter and distractions. Designed for teachers, but great for anyone wanting a cleaner way to show videos.">
     <meta property="og:title" content="Video Queue - Share videos with fewer distractions"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://videoqueue.tv"/>
-    <meta property="og:image" content="http://videoqueue.tv/facebook.png"/>
+    <meta property="og:url" content="https://www.videoqueue.tv"/>
+    <meta property="og:image" content="https://www.videoqueue.tv/facebook.png"/>
     <meta property="og:site_name" content="Video Queue"/>
     <meta property="og:description" content="Share a collection of YouTube and Vimeo videos without the usual clutter and distractions. Designed for teachers, but great for anyone wanting a cleaner way to show videos."/>
 
-    <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Oleo+Script|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Oleo+Script|Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
